# WMSTestTask

./: Dockerfile  Makefile  README.MD  docker-compose.yml  nginx.conf  pyproject.toml
app/: docker-compose.yml  main.py
app/app/: settings.py  urls.py
app/crudTest/: apps.py  dal.py  data_models.py  models.py  utils.py  views.py
app/crudTest/migrations/: 0001_initial.py  0002_alter_product_category_id.py
app/crudTest/static/: script.js  style.css
app/crudTest/templates/: index.html
app/tests/: conftest.py  docker-compose.yml  test_dal.py  test_models.py  test_settings.py  test_utils.py
